--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsPage.xaml
@@ -33,8 +33,8 @@
                     </Grid.ColumnDefinitions>
 
                     <Label 
-                Text="Condição pré-existente" 
-                        Margin="0,0,0,20"
+                Text="Você tem alguma comorbidade?" 
+                        Margin="0,0,0,5"
                 TextColor="#303030" 
                 FontSize="Medium"
                 FontAttributes="Bold"
@@ -72,7 +72,7 @@
                 VerticalOptions="Center"
                 TextColor="Gray"
                 FontSize="16"
-                Text="Asma">
+                Text="Doença respiratória">
 
                     </Label>
                     <CheckBox 
@@ -102,7 +102,7 @@
                 VerticalOptions="Center"
                 TextColor="Gray"
                 FontSize="16"
-                Text="Fumante">
+                Text="Imunodeficiência">
 
                     </Label>
                     <CheckBox 
@@ -117,7 +117,7 @@
                 VerticalOptions="Center"
                 TextColor="Gray"
                 FontSize="16"
-                Text="Cardíaco">
+                Text="Doença cardiovascular">
 
                     </Label>
                     <CheckBox 
