--- a/appsrc/AppFVC/AppFVC/Views/StatusHealthyPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusHealthyPage.xaml
@@ -27,23 +27,23 @@
             <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="10">
                     <Label Padding="20,5,20,0" Text="Mantenha-se seguro!" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
-                    <Label Padding="20,5,20,30" Text="Sempre que você chegar em casa, lave bem as mãos com água e sabão, ou álcool gel  ..."></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="Micro" Text="clique para ver mais" TextColor="#3CA368" FontAttributes="Bold"></Label>
+                    <Label Padding="20,5,20,10" Text="Ao sair de casa, lembre-se de manter a máscara cobrindo o nariz e a boca. Ao chegar, lave bem as mãos com água e sabão..."></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Clique para ver mais" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
             <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="10">
                     <Label Padding="20,5,20,0" Text="Está se sentindo mal?" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
-                    <Label Padding="20,5,20,0" Text="Está com sintomas compatíveis com o COVID-19, clique aqui e entre em contato com o Alô Saúde."></Label>
-                    <Label Padding="20,0,20,30" Text="0800 333 3233" FontAttributes="Bold" VerticalOptions="Start"></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="Micro" Text="Alô Saúde" TextColor="#3CA368" FontAttributes="Bold"></Label>
+                    <Label Padding="20,5,20,0" Text="Está com sintomas compatíveis com o COVID-19? Clique aqui e entre em contato com o Alô Saúde."></Label>
+                    <Label Padding="20,0,20,10" Text="0800 333 3233" FontAttributes="Bold" VerticalOptions="Start" HorizontalTextAlignment="Center"></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Alô Saúde" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
             <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="10">
                     <Label Padding="20,5,20,0" Text="Atualizações COVID-19" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
-                    <Label Padding="20,5,20,30" Text="Floripa acaba de receber 600 novos respiradores e mais 10 mil testes rápidos ..."></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="Micro" Text="clique para ver mais" TextColor="#3CA368" FontAttributes="Bold"></Label>
+                    <Label Padding="20,5,20,10" Text="Floripa acaba de receber 600 novos respiradores e mais 10 mil testes rápidos ..."></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Clique para ver mais" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
 
