--- a/appsrc/AppFVC/AppFVC/Views/StatusQuarantinePage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusQuarantinePage.xaml
@@ -18,37 +18,46 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Grid.RowSpan="2" Source="estou_bem.png"></Image>
+                    <Image Grid.Column="0" Grid.RowSpan="2" Source="estou_de_quarentena.png"></Image>
                     <Label Margin="10,0,0,0" Grid.Column="1" FontSize="15" Grid.Row="0" Text="Você está Infectado. Fique de quarentena imediatamente!" TextColor="Black" FontAttributes="Bold"></Label>
-                    <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1" Text="O resultado do seu teste indica que você está infectado com o Corona virus. Fique em casa e, se os sintomas se agravarem, entre em contato."></Label>
+                    <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1" Text="O resultado do seu teste indica que você está infectado com o Corona virus. Fique em casa e, caso os sintomas piorem, entre em contato."></Label>
                 </Grid>
             </Frame>
             <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
-                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-                    <Label Text="30" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" BackgroundColor="#333333" TextColor="White" WidthRequest="100" HeightRequest="95" FontAttributes="Bold" FontSize="40" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"></Label>
-                    <Label Text="DIAS PARA O FIM DA QUARENTENA" TextColor="#333333" FontAttributes="Bold" HorizontalOptions="EndAndExpand" VerticalOptions="FillAndExpand" FontSize="16" VerticalTextAlignment="Center"></Label>
-                </StackLayout>
+                <Grid HorizontalOptions="FillAndExpand" Padding="0,0,3,0" RowSpacing="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Row="0" Grid.Column="0" Text="FALTAM" HorizontalTextAlignment="Center" VerticalTextAlignment="End" BackgroundColor="#333333" TextColor="White" WidthRequest="100" HeightRequest="25" FontSize="10" VerticalOptions="EndAndExpand" ></Label>
+                    <Label Grid.Row="1" Grid.Column="0" Text="30" HorizontalTextAlignment="Center" VerticalTextAlignment="Start" BackgroundColor="#333333" TextColor="White" WidthRequest="100" HeightRequest="70" FontAttributes="Bold" FontSize="40" VerticalOptions="StartAndExpand"></Label>
+                    <Label Grid.Column="1" Grid.RowSpan="2" Text="DIAS PARA O FIM DA QUARENTENA" TextColor="#333333" FontAttributes="Bold" HorizontalOptions="EndAndExpand" WidthRequest="200" VerticalOptions="FillAndExpand" FontSize="16" VerticalTextAlignment="Center"></Label>
+                </Grid>
             </Frame>
             <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="10">
                     <Label Padding="20,5,20,0" Text="Cuidados na quarentena" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
-                    <Label Padding="20,5,20,30" Text="Você está infectado com o Corona Virus e precisa observar seus sintomas. Não entre em contato com pessoas do grupo de risco e redobre os cui"></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="Micro" Text="clique para ver mais" TextColor="#3CA368" FontAttributes="Bold"></Label>
+                    <Label Padding="20,5,20,10" Text="Você está infectado com o Corona virus e precisa observar seus sintomas. Não entre em contato com pessoas do grupo de risco..."></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Clique para ver mais" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
             <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="10">
                     <Label Padding="20,5,20,0" Text="Está se sentindo mal?" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
-                    <Label Padding="20,5,20,0" Text="Está com sintomas compatíveis com o COVID-19, clique aqui e entre em contato com o Alô Saúde."></Label>
-                    <Label Padding="20,0,20,30" Text="0800 333 3233" FontAttributes="Bold" VerticalOptions="Start"></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="Micro" Text="Alô Saúde" TextColor="#3CA368" FontAttributes="Bold"></Label>
+                    <Label Padding="20,5,20,0" Text="Está com sintomas compatíveis com o COVID-19? Clique aqui e entre em contato com o Alô Saúde."></Label>
+                    <Label Padding="20,0,20,10" Text="0800 333 3233" HorizontalTextAlignment="Center" FontAttributes="Bold" VerticalOptions="Start"></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Alô Saúde" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
             <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="10">
                     <Label Padding="20,5,20,0" Text="Atualizações COVID-19" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
-                    <Label Padding="20,5,20,30" Text="Floripa acaba de receber 600 novos respiradores e mais 10 mil testes rápidos ..."></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="Micro" Text="clique para ver mais" TextColor="#3CA368" FontAttributes="Bold"></Label>
+                    <Label Padding="20,5,20,10" Text="Floripa acaba de receber 600 novos respiradores e mais 10 mil testes rápidos ..."></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Clique para ver mais" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
 
