--- a/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
@@ -10,7 +10,7 @@
         <StackLayout>
             <Frame CornerRadius="5" VerticalOptions="StartAndExpand" HasShadow="True" Margin="40,55,40,30">
                 <StackLayout Padding="7,5,7,10" Spacing="10">
-                    <Label Text="Cuida Mané!" FontSize="Medium" FontAttributes="Bold" TextColor="#303030"/>
+                    <Label Text="Cuida Maneh!" FontSize="Medium" FontAttributes="Bold" TextColor="#303030"/>
                     <Label TextColor="#737373" Text="Aqui em Floripa, a vida vem em primeiro lugar." FontSize="16"/>
                     <Label TextColor="#737373" FontSize="16" Text="Nesse APP, vamos monitorar sua localização para identificar se você pode ter sido infectado. Se você teve contato com alguém que testou positivo, não se preocupe, vamos te avisar! E aí é só seguir as recomendações do aplicativo."/>
                     <Label TextColor="#737373" FontSize="16" Text="Queremos proteger você e todos os que você ama."/>
