--- a/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
@@ -7,22 +7,16 @@
              BackgroundColor="#F2994A">
 
     <ScrollView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-        <StackLayout BackgroundColor="Transparent" x:Name="stSaudavel">
+        <StackLayout BackgroundColor="Transparent" x:Name="stSaude">
          <Frame VerticalOptions="Start" HorizontalOptions="FillAndExpand"   Margin="0,30,0,5" CornerRadius="5" HasShadow="True">
-                <Frame.GestureRecognizers>
-                    <TapGestureRecognizer
-                        BindingContext="{Binding Source={x:Reference stSaudavel}, Path=BindingContext}"
-                        CommandParameter="{Binding Source={x:Reference gridSaudavel}, Path=BindingContext}"
-                        Command="{Binding NavegarSite}"
-                        ></TapGestureRecognizer>
-                </Frame.GestureRecognizers>
 
-                <Grid  x:Name="gridSaudavel"> 
+
+                <Grid x:Name="gridSaude">
                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer
-                        BindingContext="{Binding Source={x:Reference stSaudavel}, Path=BindingContext}"
-                        CommandParameter="{Binding Source={x:Reference gridSaudavel}, Path=BindingContext}"
-                        Command="{Binding NavegarPagina}"
+                        BindingContext="{Binding Source={x:Reference stSaude}, Path=BindingContext}"
+                        CommandParameter="{Binding Source={x:Reference gridSaude}, Path=BindingContext}"
+                        Command="{Binding NavegarPaginaQuarentine}"
                         ></TapGestureRecognizer>
                     </Grid.GestureRecognizers>
                     <Grid.RowDefinitions>
@@ -38,7 +32,7 @@
                 <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1" Text="Você foi exposto ao Corona virus e pode ter sido contaminado. Fique em casa e observe os sintomas."></Label>
             </Grid>
          </Frame>
-            <Frame Padding="0" Margin="50,10,50,10" CornerRadius="5">
+            <Frame Padding="0"  Margin="40,10,40,5" CornerRadius="5">
                 <Grid HorizontalOptions="FillAndExpand" Padding="0,0,3,0" RowSpacing="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -53,7 +47,7 @@
                     <Label Grid.Column="1" Grid.RowSpan="2" Text="DIAS PARA O FIM DO ISOLAMENTO" TextColor="#333333" FontAttributes="Bold" HorizontalOptions="EndAndExpand" WidthRequest="200" VerticalOptions="FillAndExpand" FontSize="16" VerticalTextAlignment="Center"></Label>
                 </Grid>
             </Frame>
-            <Frame Padding="0" Margin="50,10,50,10" x:Name="frSaudeSite" CornerRadius="5">
+            <Frame Padding="0"  Margin="40,10,40,5" x:Name="frSaudeSite" CornerRadius="5">
                 <StackLayout Orientation="Vertical" x:Name="stSaudeSite" HorizontalOptions="FillAndExpand" Padding="10">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer
@@ -67,7 +61,7 @@
                     <Label HorizontalTextAlignment="Center" FontSize="10" Text="Clique para ver mais" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
-            <Frame Padding="0" Margin="50,10,50,10" x:Name="frTel" CornerRadius="5">
+            <Frame Padding="0"  Margin="40,10,40,5" x:Name="frTel" CornerRadius="5">
                 <StackLayout Orientation="Vertical" x:Name="stTel" HorizontalOptions="FillAndExpand" Padding="10">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer
@@ -82,7 +76,7 @@
                     <Label HorizontalTextAlignment="Center" FontSize="10" Text="Alô Saúde" TextColor="#6FCF97" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
-            <Frame Padding="0" Margin="50,10,50,10" x:Name="frAtualiza" CornerRadius="5">
+            <Frame Padding="0"  Margin="40,10,40,5" x:Name="frAtualiza" CornerRadius="5">
                 <StackLayout Orientation="Vertical" x:Name="stAtualiza"  HorizontalOptions="FillAndExpand" Padding="10">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer
