--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -47,7 +47,7 @@
                         </customRenders:CustomEntry>
                     </Frame>
                     <Label Grid.Row="4" Grid.ColumnSpan="2" Margin="10,0,0,0" Text="{Binding ErroNumero}" TextColor="#EB5757" IsVisible="{Binding IVNumero}" FontSize="11"></Label>
-                    
+
                     <Frame Grid.Row="5" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
                         <customRenders:CustomEntry Placeholder="Idade" Text="{Binding Idade}" Keyboard="Numeric" MaxLength="3" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                     </Frame>
@@ -73,7 +73,26 @@
                         </Label.GestureRecognizers>
                     </Label>
                     <CheckBox Grid.Row="8" Grid.Column="0" IsChecked="{Binding CheckTermo}" Color="#009789" Margin="0,5,0,0" VerticalOptions="EndAndExpand" HorizontalOptions="StartAndExpand" ></CheckBox>
-                    <Label Grid.Row="8" Grid.Column="1" Margin="0,10,0,0" Text="Li e aceito os termos de uso." FontSize="14" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="StartAndExpand" ></Label>
+                    <BoxView Grid.Row="8" Grid.Column="1" x:Name="boxTerms" HeightRequest="20" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                        <BoxView.GestureRecognizers>
+                            <TapGestureRecognizer
+                         BindingContext="{Binding Source={x:Reference GridRegister}, Path=BindingContext}"
+                         CommandParameter="{Binding Source={x:Reference boxTerms}, Path=BindingContext}"
+                         Command="{Binding NavegarRegisterInfo}">
+
+                            </TapGestureRecognizer>
+                        </BoxView.GestureRecognizers>
+                    </BoxView>
+                    <Label Grid.Row="8" Grid.Column="1" x:Name="lbTerms" Margin="0,10,0,0" Text="Li e aceito os termos de uso." FontSize="14" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="StartAndExpand" >
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer
+                         BindingContext="{Binding Source={x:Reference GridRegister}, Path=BindingContext}"
+                         CommandParameter="{Binding Source={x:Reference lbTerms}, Path=BindingContext}"
+                         Command="{Binding NavegarTerms}">
+
+                            </TapGestureRecognizer>
+                        </Label.GestureRecognizers>
+                    </Label>
                     <Label Grid.Row="9" Grid.ColumnSpan="2" Margin="10,0,0,20" Text="{Binding Erro}" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
                     <Button Grid.Row="10" Grid.ColumnSpan="2" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo"   VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
