--- a/appsrc/AppFVC/AppFVC/Views/SmsPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/SmsPage.xaml
@@ -11,8 +11,9 @@
     <ScrollView>
         <StackLayout>
             <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,55,40,10">
-                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="15" Padding="5,10,5,10">
+                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="5,10,5,10">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -26,17 +27,17 @@
                     </Grid.ColumnDefinitions>
                     <Label Grid.Row="0" Grid.Column="0" Text="Código SMS" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="Medium" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="CenterAndExpand"></Label>
                     <Label Grid.Row="1" Grid.Column="0" Text="{Binding LabelTelefone}" HorizontalTextAlignment="Center"></Label>
-                    <Frame Grid.Row="2" Grid.Column="0" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
+                    <Frame Grid.Row="2" Grid.Column="0" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand" Margin="0,10,0,0">
                         <customRenders:CustomEntry Placeholder="Digite aqui o cógio enviado" Keyboard="Numeric" Margin="10,0,0,0" MaxLength="6" HeightRequest="38" FontSize="13" Text="{Binding Codigo}" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
                             <Entry.Behaviors>
                                 <local:CodigoBehavior />
                             </Entry.Behaviors>
                         </customRenders:CustomEntry>
                     </Frame>
-                    <Label Grid.Row="4" Grid.Column="0" IsVisible="{Binding VisibleErro}" Text="{Binding Erro}" TextColor="Red" FontAttributes="Bold" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Label>
-                    <Label Grid.Row="3" Grid.Column="0" Text="Reenviar código" Style="{StaticResource BoldFont}" TextColor="#6FCF97" FontAttributes="Bold" HorizontalOptions="CenterAndExpand"></Label>
-                    <Button Grid.Row="4" Grid.Column="0" Margin="0,10,0,0" CornerRadius="25" TextColor="White" Text="Próximo" Command="{Binding NavegarNext}" BackgroundColor="#219653" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
-                    <Label Grid.Row="5" Grid.Column="0" Text="Voltar" TextColor="#828282" HorizontalOptions="CenterAndExpand"></Label>
+                    <Label Grid.Row="3" Grid.Column="0" IsVisible="{Binding VisibleErro}" Text="{Binding Erro}" HorizontalTextAlignment="Center" TextColor="#EB5757" FontSize="11" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Label>
+                    <Label Grid.Row="4" Grid.Column="0" Text="Reenviar código" Style="{StaticResource BoldFont}" TextColor="#6FCF97" FontAttributes="Bold" HorizontalOptions="CenterAndExpand"></Label>
+                    <Button Grid.Row="5" Grid.Column="0" Margin="0,20,0,0" CornerRadius="25" TextColor="White" Text="Próximo" Command="{Binding NavegarNext}" BackgroundColor="#219653" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <Label Grid.Row="6" Grid.Column="0" Text="Voltar" TextColor="#828282" HorizontalOptions="CenterAndExpand"></Label>
                 </Grid>
             </Frame>
         </StackLayout>
